[Feature] BindLocalizations (Previously known as BindXML) is now a full-feature and is applied on all localization files across OpenMarkov.